<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>lab1_pkg</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="nithasree@todo.todo">nithasree</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>
  <depend>rclcpp</depend>
  <depend>rclpy</depend>
  <depend>ackermann_msgs</depend>
  <depend>std_msgs</depend>
  
  <exec_depend>talker_node</exec_depend>
  

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
